--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Copyright 2013 - The CyanogenMod Project
 
-Common device configuration for Samsung Galaxy Express (ATT Version - SGH-I437)
+Device configuration for Samsung Galaxy Express (ATT Version - SGH-I437)
 
 WORK IN PROGRESS. WILL EAT YOUR CAT.
